added better data